# MLflow_customer_churn_prediction

./: README.md  initialization.py  mlfow_experiment.ipynb  pyproject.toml
telecome_customer_churn/: test.csv  train.csv  valid.csv
